--- a/software_enginnering.ipynb
+++ b/software_enginnering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8JzraDbX38/Rjew38QBJz",
+      "authorship_tag": "ABX9TyNoUln9FCMaT2s36Q67OZGu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b2507d8a-123a-4d94-e425-a72c54e3cfc9"
+        "outputId": "fde1b7c5-427e-4ea9-d32c-03bd41527883"
       },
       "source": [
-        "# Hardcoding  variables\n",
+        "  # Hardcoding  variables\n",
         "name = \"Alice\"\n",
         "age = 30\n",
         "print(f\"Name: {name}, Age: {age}\")"
@@ -59,7 +59,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d4927228-c801-42a4-c620-ca3a3782cf54"
+        "outputId": "8c44a6fe-0459-4cfa-d33c-1036d72ea235"
       },
       "source": [
         "# Taking string input from the keyboard\n",
@@ -85,7 +85,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e9804356-6145-409f-aa77-ec8b2b7dd7c4"
+        "outputId": "f3a8639c-6123-4550-c97a-dfdb2af7ac50"
       },
       "source": [
         "# creating a single input file\n",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ART9gQS6T7bE",
-        "outputId": "1c148bc8-b730-4acd-d2e5-2eccdf0a5419"
+        "outputId": "ccfc5b37-ce75-4d0f-9ab6-623317c7a78e"
       },
       "execution_count": null,
       "outputs": [
@@ -145,7 +145,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "53ffc1b4-8e50-49a7-ad44-58eb8d694e04"
+        "outputId": "16f76b95-3211-4bb8-91fb-28c27f8c36fa"
       },
       "source": [
         "# Creating  multiple input of file\n",
@@ -184,7 +184,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2XF95CMwUL0d",
-        "outputId": "d5f4bea0-b11b-475e-9c13-781ad3dcdb8f"
+        "outputId": "8ef69dec-21b9-40c8-bd10-98b4bdfb7124"
       },
       "execution_count": null,
       "outputs": [
@@ -196,6 +196,339 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "wheather modling using qudracic equation"
+      ],
+      "metadata": {
+        "id": "dejap-Pkio-Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def temperature_modeling(a, b, c, time):\n",
+        " temperature = a * time**2 + b * time + c\n",
+        " return temperature"
+      ],
+      "metadata": {
+        "id": "nAeTUB4iixmD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "print(\"Hard-coded variables for weather modeling\")\n",
+        "a = 1.0\n",
+        "b = 1.0\n",
+        "c = 1.0\n",
+        "time = 2.5\n",
+        "print(f\"Temperature from hardcoded coefficients at time {time} hours:\")\n",
+        "print(temperature_modeling(a, b, c, time))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ihR7bmgni-_t",
+        "outputId": "2c707fb0-a395-42ec-a76d-7a7d73bfad4a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hard-coded variables for weather modeling\n",
+            "Temperature from hardcoded coefficients at time 2.5 hours:\n",
+            "9.75\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\nKeyboard input for weather modeling\")\n",
+        "a = float(input(\"Type coefficient a: \"))\n",
+        "b = float(input(\"Type coefficient b: \"))\n",
+        "c = float(input(\"Type coefficient c: \"))\n",
+        "time = 10.0\n",
+        "print(f\"Temperature from keyboard coefficients at time {time} hours:\")\n",
+        "print(temperature_modeling(a, b, c, time))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9kTMI1Y8jHNG",
+        "outputId": "9330d383-b319-41f3-a439-a803e412cc48"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Keyboard input for weather modeling\n",
+            "Type coefficient a: 2\n",
+            "Type coefficient b: 3\n",
+            "Type coefficient c: 2\n",
+            "Temperature from keyboard coefficients at time 10.0 hours:\n",
+            "232.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def read_from_file(filename):\n",
+        "    with open(filename, 'r') as file:\n",
+        "        lines = file.readlines()\n",
+        "    coefficients = [float(line.strip()) for line in lines]\n",
+        "    return coefficients\n",
+        "\n",
+        "# Create coefficients.txt if it doesn't exist\n",
+        "file_name_coefficients = \"coefficients.txt\"\n",
+        "with open(file_name_coefficients, \"w\") as f:\n",
+        "    f.write(\"1.0\\n\")\n",
+        "    f.write(\"2.0\\n\")\n",
+        "    f.write(\"3.0\\n\")\n",
+        "\n",
+        "print(f\"Created '{file_name_coefficients}' for weather modeling coefficients.\")\n",
+        "\n",
+        "print(\"\\nFile input for weather modeling\")\n",
+        "a, b, c = read_from_file(\"coefficients.txt\")\n",
+        "time = 0.4\n",
+        "print(f\"Temperature from file coefficients at time {time} hours:\")\n",
+        "print(temperature_modeling(a, b, c, time))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YKrysyn2jJKX",
+        "outputId": "db6e2c13-3f46-4780-8ee0-6d8a31c7622a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Created 'coefficients.txt' for weather modeling coefficients.\n",
+            "\n",
+            "File input for weather modeling\n",
+            "Temperature from file coefficients at time 0.4 hours:\n",
+            "3.96\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def solve_coefficients(t1, t2, t3, temp1, temp2, temp3):\n",
+        "    import numpy as np\n",
+        "    A = np.array([\n",
+        "        [t1**2, t1, 1],\n",
+        "        [t2**2, t2, 1],\n",
+        "        [t3**2, t3, 1]\n",
+        "    ])\n",
+        "    B = np.array([temp1, temp2, temp3])\n",
+        "    coeffs = np.linalg.solve(A, B)\n",
+        "    return coeffs\n",
+        "\n",
+        "\n",
+        "print(\"\\nSolving coefficients from system of equations\")\n",
+        "a, b, c = solve_coefficients(0, 5, 10, 5, 6, 8)\n",
+        "time = 0.0\n",
+        "print(f\"Temperature from system coefficients at time {time} hours:\")\n",
+        "print(temperature_modeling(a, b, c, time))\n"
+      ],
+      "metadata": {
+        "id": "-m086x4AjO43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fced5098-ac12-4aa6-bfde-b95a7a8c8ffe"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Solving coefficients from system of equations\n",
+            "Temperature from system coefficients at time 0.0 hours:\n",
+            "5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "name = \"Soun\"\n",
+        "course = \"Software Engineering\"\n",
+        "print(f\"Hardcoded String Output: Student {name} is enrolled in {course}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q6uJ1VA7G4VK",
+        "outputId": "2c1b0213-8de7-49c9-ffa8-7d4ad58d6c02"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hardcoded String Output: Student Soun is enrolled in Software Engineering\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "with open(\"names.txt\", \"w\") as f:\n",
+        "    f.write(\"Alice\\nBob\\nCharlie\")\n",
+        "\n",
+        "\n",
+        "try:\n",
+        "    with open(\"names.txt\", \"r\") as f:\n",
+        "        names = [line.strip() for line in f.readlines()]\n",
+        "    print(\"Names Read from File:\", names)\n",
+        "except FileNotFoundError:\n",
+        "    print(\"File not found!\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dUNsbub8G76l",
+        "outputId": "27164f6c-9f23-4385-9865-af74ca26a138"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Names Read from File: ['Alice', 'Bob', 'Charlie']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "import math\n",
+        "\n",
+        "num1 = 5\n",
+        "print(f\"Hardcoded Factorial: {num1}! = {math.factorial(num1)}\")\n",
+        "\n",
+        "\n",
+        "try:\n",
+        "    num2 = int(input(\"Enter a number to find factorial: \"))\n",
+        "    print(f\"User Input Factorial: {num2}! = {math.factorial(num2)}\")\n",
+        "except ValueError:\n",
+        "    print(\"Error: Please enter a valid integer!\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TH96RTbFHAiY",
+        "outputId": "f256f755-0867-4a23-e578-b2452b02801a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hardcoded Factorial: 5! = 120\n",
+            "Enter a number to find factorial: 3\n",
+            "User Input Factorial: 3! = 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "\n",
+        "def quadratic(x, a=-1, b=0, c=10):\n",
+        "    return a * x**2 + b * x + c\n",
+        "\n",
+        "\n",
+        "stages = [\"Requirements\", \"Design\", \"Implementation\", \"Verification\", \"Maintenance\"]\n",
+        "x_positions = np.linspace(-2, 2, len(stages))\n",
+        "y_positions = quadratic(x_positions)\n",
+        "\n",
+        "\n",
+        "x_curve = np.linspace(-2.5, 2.5, 500)\n",
+        "y_curve = quadratic(x_curve)\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "plt.plot(x_curve, y_curve, color=\"blue\", linestyle=\"--\", label=\"Quadratic Curve\")\n",
+        "\n",
+        "\n",
+        "for i in range(len(stages)):\n",
+        "    if i > 0:\n",
+        "\n",
+        "        plt.plot(\n",
+        "            [x_positions[i-1], x_positions[i]],\n",
+        "            [y_positions[i-1], y_positions[i-1]],\n",
+        "            color=\"blue\",\n",
+        "            linewidth=2\n",
+        "        )\n",
+        "\n",
+        "        plt.plot(\n",
+        "            [x_positions[i], x_positions[i]],\n",
+        "            [y_positions[i-1], y_positions[i]],\n",
+        "            color=\"blue\",\n",
+        "            linewidth=2\n",
+        "        )\n",
+        "\n",
+        "\n",
+        "    plt.scatter(x_positions[i], y_positions[i], color=\"red\", zorder=5)\n",
+        "    plt.text(x_positions[i], y_positions[i] + 0.3, stages[i], ha=\"center\", fontsize=10)\n",
+        "\n",
+        "\n",
+        "plt.title(\"Waterfall Model Representation Using Quadratic Curve\", fontsize=14)\n",
+        "plt.xlabel(\"Stages\", fontsize=12)\n",
+        "plt.ylabel(\"Value\", fontsize=12)\n",
+        "plt.axhline(0, color=\"black\", linewidth=0.5, linestyle=\"--\")\n",
+        "plt.axvline(0, color=\"black\", linewidth=0.5, linestyle=\"--\")\n",
+        "plt.grid(color=\"gray\", linestyle=\"--\", linewidth=0.5, alpha=0.7)\n",
+        "plt.legend()\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "jA9IjxHUFEjv"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
